fixing spacing

--- a/CSS/MainPage.css
+++ b/CSS/MainPage.css
@@ -13,9 +13,9 @@ html {
 
 body {
 	position: relative;
-	background-color: #D2BE81;
-	width: 80%;
-	left:10%;
+	background-color: FFFAED;
+	width: 60%;
+	left:20%;
 	top: 0px;
 	height: 100%;
 }
